--- a/arch/arm64/configs/evo_defconfig
+++ b/arch/arm64/configs/evo_defconfig
@@ -936,6 +936,7 @@ CONFIG_OPLUS_FEATURE_AUDIO_OPT=y
 #ifdef OPLUS_FEATURE_ZRAM_OPT
 CONFIG_OPLUS_ZRAM_OPT=y
 CONFIG_CRYPTO_LZ4=y
+CONFIG_ZRAM_SIZE_OVERRIDE=8
 CONFIG_PGTABLE_MAPPING=y
 CONFIG_CRYPTO_ZSTD=y
 #endif
