--- a/arch/arm64/configs/evo_defconfig
+++ b/arch/arm64/configs/evo_defconfig
@@ -762,8 +762,8 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_BFQ=y
-CONFIG_DEFAULT_ANXIETY=y
-CONFIG_DEFAULT_IOSCHED="anxiety"
+CONFIG_DEFAULT_ZEN=y
+CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_CFQ_GROUP_IOSCHED=y
 # CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
