--- a/arch/arm64/configs/evo_defconfig
+++ b/arch/arm64/configs/evo_defconfig
@@ -953,8 +953,8 @@ CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_SOCIOPATH=y
 CONFIG_TCP_CONG_AGILESD=y
-CONFIG_DEFAULT_BBR=y
-CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_DEFAULT_SOCIOPATH=y
+CONFIG_DEFAULT_TCP_CONG="sociopath"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
